# markdown2reminder

./: LICENSE  README.md  md2mail.cabal
app/: Main.hs
src/: Lib.hs
