name:                md2mail
version:             0.1.0.0
synopsis:            small tool to read a markdown-file and send out mails
description:         small tool to read a markdown-file and send out mails
homepage:            https://github.com/Drezil/md2mail#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Dresselhaus
maintainer:          sdressel@techfak.uni-bielefeld.de
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , time
                     , pandoc
                     , pandoc-types
  default-language:    Haskell2010

executable md2mail
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , md2mail
  default-language:    Haskell2010

test-suite md2mail-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , md2mail
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Drezil/md2mail
